[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/PauseMenu/CustomButton.gd" type="Script" id=1]
[ext_resource path="res://UI/Assets/NokiaCellphone.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Assets/NokiaCellphone.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/MainMenu/UI.gd" type="Script" id=4]
[ext_resource path="res://UI/ScreenTransition.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Confirmation/Confirmation.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Assets/Title_RedNivis.png" type="Texture" id=7]
[ext_resource path="res://UI/Settings/OptionsMenu.tscn" type="PackedScene" id=8]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float is_right = 1.0;

void fragment()
{
	COLOR.a = mix(1.0 - UV.x, UV.x, is_right);
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/is_right = 0.0

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 9 )
shader_param/is_right = 1.0

[sub_resource type="DynamicFont" id=5]
size = 13
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -200, -28 )
script = ExtResource( 4 )

[node name="Background" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 150

[node name="ColorRect" type="ColorRect" parent="Background"]
material = SubResource( 10 )
margin_right = 105.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="Background"]
material = SubResource( 8 )
margin_left = 255.0
margin_right = 360.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Options" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 94.0
custom_constants/separation = 0
alignment = 1

[node name="Title" type="TextureRect" parent="Options"]
visible = false
margin_right = 94.0
margin_bottom = 32.0
rect_min_size = Vector2( 90, 32 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Play" type="Button" parent="Options"]
margin_top = 78.0
margin_right = 94.0
margin_bottom = 94.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../NewGame")
custom_fonts/font = ExtResource( 2 )
text = "PLAY_BTN"
align = 0
script = ExtResource( 1 )

[node name="Options" type="Button" parent="Options"]
margin_top = 94.0
margin_right = 94.0
margin_bottom = 110.0
focus_neighbour_top = NodePath("../NewGame")
focus_neighbour_bottom = NodePath("../Quit")
custom_fonts/font = ExtResource( 2 )
text = "OPTIONS_M_BTN"
align = 0
script = ExtResource( 1 )
fromPth = NodePath("..")
toPth = NodePath("../../OptionsMenu")

[node name="NewGame" type="Button" parent="Options"]
margin_top = 110.0
margin_right = 94.0
margin_bottom = 126.0
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Options")
custom_fonts/font = ExtResource( 2 )
text = "NEW_GAME_BTN"
align = 0
script = ExtResource( 1 )
isNegative = true

[node name="Quit" type="Button" parent="Options"]
margin_top = 126.0
margin_right = 94.0
margin_bottom = 142.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Play")
custom_fonts/font = ExtResource( 2 )
text = "QUIT_BTN"
align = 0
script = ExtResource( 1 )
isNegative = true

[node name="Credits" type="VBoxContainer" parent="."]
visible = false
anchor_bottom = 1.0
rect_min_size = Vector2( 90, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Credits"]
margin_right = 143.0
margin_bottom = 200.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/ScrollContainer"]
margin_right = 131.0
margin_bottom = 496.0

[node name="Title" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
margin_right = 131.0
margin_bottom = 32.0
rect_min_size = Vector2( 90, 32 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "CREDITS_M_BTN"
align = 1
valign = 1

[node name="Dev" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 131.0
margin_bottom = 68.0
rect_min_size = Vector2( 90, 32 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "By: Xander Swan"
align = 1
valign = 1

[node name="Title2" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 131.0
margin_bottom = 104.0
rect_min_size = Vector2( 90, 32 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Testers"
align = 1
valign = 1

[node name="Playtesters" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 131.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 32 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "IAmCatman
Dot32
Ne Mene
Juice Baby
Quantyy
Woozy
Kenshi
IKEA
I<3Pepsi
Fejiberglibstein
BaconGremlin24
Lighted
MRZ_20
6AM
Shadow"
align = 1

[node name="Title4" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 131.0
margin_bottom = 336.0
rect_min_size = Vector2( 90, 32 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Translators"
align = 1
valign = 1

[node name="Translators" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 131.0
margin_bottom = 376.0
rect_min_size = Vector2( 90, 32 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "6AM
BANAN
Feji"
align = 1

[node name="Title3" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
margin_top = 380.0
margin_right = 131.0
margin_bottom = 417.0
rect_min_size = Vector2( 90, 32 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "
Thanks"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thanks" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
margin_top = 421.0
margin_right = 131.0
margin_bottom = 496.0
rect_min_size = Vector2( 90, 32 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Samm
Firmar
Yarvin
Gangly
Dot32
Adrian"
align = 1

[node name="Back" type="Button" parent="Credits"]
margin_top = 204.0
margin_right = 143.0
margin_bottom = 220.0
custom_fonts/font = ExtResource( 2 )
text = "BACK_BTN"
align = 0
script = ExtResource( 1 )
isNegative = true
fromPth = NodePath("..")
toPth = NodePath("../../Options")

[node name="OptionsMenu" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Back" parent="OptionsMenu/Center/NavMenu" index="6"]
fromPth = NodePath("../../..")
toPth = NodePath("../../../../Options")

[node name="ScreenTransition" parent="." instance=ExtResource( 5 )]

[node name="QuitAccept" parent="." instance=ExtResource( 6 )]
visible = false
text = "QUIT_CONFIRM"
negativeOptions = [ "YES" ]

[node name="NewGameAccept" parent="." instance=ExtResource( 6 )]
visible = false
text = "CLEAR_CONFIRM"
negativeOptions = [ "YES" ]

[connection signal="pressed" from="Options/Play" to="." method="play"]
[connection signal="pressed" from="Options/NewGame" to="." method="new_game"]
[connection signal="pressed" from="Options/Quit" to="." method="start_quit"]
[connection signal="optionPressed" from="QuitAccept" to="." method="quit"]
[connection signal="optionPressed" from="NewGameAccept" to="." method="_on_new_game_confirm"]

[editable path="OptionsMenu"]
